# libprocreact

./: COPYING  Doxyfile  Makefile.am  README.md  configure.ac  release.nix
src/: Makefile.am  libprocreact.pc.in
src/libprocreact/: Makefile.am  procreact_future.h  procreact_future_iterator.h  procreact_pid.h  procreact_pid_iterator.h  procreact_signal.h  procreact_types.h  procreact_util.h
tests/: Makefile.am  add.c  asynccount.c  asynciterate.c  catfile.c  catfile_text1.sh  catfile_text2.sh  catfile_text3.sh  catfile_text4.sh  checkcountparallel.sh  collectparallel.c  collectparallelfail.c  collectparallelorder.c  countparallel.c  iteratetrue.c  iteratetruefail.c  lotsofoutput.c  output1.txt  output2.txt  output3.txt  output4.txt  sayhelloto.c  sayhellotofail.c  text2.txt  text3.txt  text4.txt
