check_PROGRAMS = add sayhelloto sayhellotofail lotsofoutput catfile iteratetrue iteratetruefail countparallel collectparallel collectparallelfail collectparallelorder asynciterate asynccount

TESTS = add sayhelloto sayhellotofail lotsofoutput catfile_text1.sh catfile_text2.sh catfile_text3.sh catfile_text4.sh iteratetrue iteratetruefail checkcountparallel.sh collectparallel collectparallelfail collectparallelorder asynciterate asynccount

add_SOURCES = add.c
add_LDADD = ../src/libprocreact/libprocreact.la
add_CFLAGS = -I../src/libprocreact

sayhelloto_SOURCES = sayhelloto.c
sayhelloto_LDADD = ../src/libprocreact/libprocreact.la
sayhelloto_CFLAGS = -I../src/libprocreact

sayhellotofail_SOURCES = sayhellotofail.c
sayhellotofail_LDADD = ../src/libprocreact/libprocreact.la
sayhellotofail_CFLAGS = -I../src/libprocreact

lotsofoutput_SOURCES = lotsofoutput.c
lotsofoutput_LDADD = ../src/libprocreact/libprocreact.la
lotsofoutput_CFLAGS = -I../src/libprocreact

catfile_SOURCES = catfile.c
catfile_LDADD = ../src/libprocreact/libprocreact.la
catfile_CFLAGS = -I../src/libprocreact

iteratetrue_SOURCES = iteratetrue.c
iteratetrue_LDADD = ../src/libprocreact/libprocreact.la
iteratetrue_CFLAGS = -I../src/libprocreact

iteratetruefail_SOURCES = iteratetruefail.c
iteratetruefail_LDADD = ../src/libprocreact/libprocreact.la
iteratetruefail_CFLAGS = -I../src/libprocreact

countparallel_SOURCES = countparallel.c
countparallel_LDADD = ../src/libprocreact/libprocreact.la
countparallel_CFLAGS = -I../src/libprocreact

collectparallel_SOURCES = collectparallel.c
collectparallel_LDADD = ../src/libprocreact/libprocreact.la
collectparallel_CFLAGS = -I../src/libprocreact

collectparallelfail_SOURCES = collectparallelfail.c
collectparallelfail_LDADD = ../src/libprocreact/libprocreact.la
collectparallelfail_CFLAGS = -I../src/libprocreact

collectparallelorder_SOURCES = collectparallelorder.c
collectparallelorder_LDADD = ../src/libprocreact/libprocreact.la
collectparallelorder_CFLAGS = -I../src/libprocreact

asynciterate_SOURCES = asynciterate.c
asynciterate_LDADD = ../src/libprocreact/libprocreact.la
asynciterate_CFLAGS = -I../src/libprocreact

asynccount_SOURCES = asynccount.c
asynccount_LDADD = ../src/libprocreact/libprocreact.la
asynccount_CFLAGS = -I../src/libprocreact

EXTRA_DIST = catfile_text1.sh catfile_text2.sh catfile_text3.sh catfile_text4.sh text1.txt text2.txt text3.txt text4.txt output1.txt output2.txt output3.txt output4.txt checkcountparallel.sh
